<resources>
    <string name="app_name">Catalogue Movie</string>
    <string name="search">Search</string>
    <string name="title">Captain America</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="movie_poster">Movie Poster</string>

    <string name="rating">%s/10</string>
    <string name="vote_count">(%s votes)</string>
    <string name="release_date">Release date : %s</string>
    <string name="summary">Summary</string>
    <string name="trailers">Trailers</string>
    <string name="tv_show_title">Title</string>
    <string name="not_found">Movie not found</string>
    <string name="text_empty">Field can not be empty</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_hint">Put movie title here</string>
    <string name="search_results">Search Results</string>
    <string name="email">dhytodev@gmail.com</string>
    <string name="favorite">Favorite</string>
    <string name="movie_added_to_favorite">Movie added to favorite list</string>
    <string name="movie_removed_from_favorite">Movie deleted from favorite list</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="empty_widget_view_text">No Movies Added</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="action_notification">Notifications</string>
    <string name="key_reminder_daily">key_daily_reminder</string>
    <string name="label_daily_reminder_summary">Turn on/off daily reminder</string>
    <string name="label_daily_reminder_title">Daily Reminder</string>
    <string name="key_reminder_upcoming">key_upcoming_reminder</string>
    <string name="label_upcoming_reminder_summary">Turn on/off upcoming reminder</string>
    <string name="label_upcoming_reminder_title">Upcoming Reminder</string>
    <string name="key_setting_locale">key_setting_locale</string>
    <string name="label_setting_locale_summary">Setting Locale</string>
    <string name="label_setting_locale_title">Change your phone localization</string>
    <string name="msg_daily_reminder">Hi, movie apps are waiting for you!</string>
</resources>
