<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/now_playing"
            android:icon="@drawable/ic_live_tv_black_24dp"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/upcoming"
            android:icon="@drawable/ic_movie_black_24dp"
            android:title="@string/upcoming" />

        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_star_white_24dp"
            android:title="@string/favorite" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search_white_24px"
            android:title="@string/search" />
    </group>
</menu>
